--- a/TM.RestHour/Views/Equipments/Index.cshtml
+++ b/TM.RestHour/Views/Equipments/Index.cshtml
@@ -210,7 +210,7 @@
                             @*<img src="~/background/excel.png" class="img-responsive" style="height:100%; width:100%;" />*@
                         </div>
                         <div class="export-template-label" style="display:inline-block;margin:4px 5px -8px 0px;">
-                            <a href="../../EquipmentNew/EquipmentList.xlsx" target="_self" download>
+                            <a href="../EquipmentNew/EquipmentList.xlsx" target="_self" download>
                                 <img src="#" alt="Download Template" style="float:left; width:160px;" class="button1">
                             </a>
                         </div>
