--- a/TM.RestHour/Views/CrewHealth/MedicalHistory.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalHistory.cshtml
@@ -4,14 +4,20 @@
     ViewBag.Title = "MedicalHistory";
 }
 
+
+<link href="~/Content/jquery-ui.min.css" rel="stylesheet" />
+<link href="~/Content/themes/base/datepicker.css" rel="stylesheet" />
+
+<link href="~/link/css/crewlistr.css" rel="stylesheet" />
+
 <link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/select.dataTables.min.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/rowReorder.dataTables.min.css" rel="stylesheet" />
 <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
-<link href="dist/dual-listbox.css" rel="stylesheet">
+
 <link href="~/link/css/rank.css" rel="stylesheet" />
 
-<script src="~/Scripts/notify.min.js"></script>
+
 <script src="~/Scripts/toastr.min.js"></script>
 <link href="~/Content/toastr.min.css" rel="stylesheet" />
 <script src="~/Scripts/CrewHealth.js"></script>
@@ -120,11 +126,18 @@
     <script src="~/Scripts/vfs_fonts.js"></script>
     <script src="~/Scripts/CrewHealth.js"></script>
 
+    <script src="~/Scripts/toastr.min.js"></script>
+    <link href="~/Content/toastr.min.css" rel="stylesheet" />
+
+    <script src="~/Scripts/DataTables/dataTables.select.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.rowReorder.min.js"></script>
+
     <script type="text/javascript">
 
 
         $(document).ready(function () {
             //SetUpGridReport();
+         
             SetUpGrid();
             SetUpPrintGridReport();
         });
