--- a/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
+++ b/TM.RestHour/Views/CrewHealth/PatientDetails.cshtml
@@ -374,34 +374,35 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="checkbox" name="uploaddoc" id="JoiningMedical" value="1"> Joining Medical
+                        <input type="checkbox" name="uploaddoc" id="JoiningMedical" value="1">
                         @*<button type="button" onclick="location.href='@Url.Action("UploadJoiningMedical", "CrewHealth")';return false;">Upload </button>*@
-                        <button type="button" class="button1" style="width:18%;" onclick="return UploadJoiningMedical();" id="btnUploadJoiningMedical">Upload</button>
-                        </br>
-                        <input type="checkbox" name="uploaddoc" id="MedicineAvailableOnBoard" value="1"> Medicine Available On Board
-                        @*<button type="button" onclick="location.href='@Url.Action("MedicineAvailableOnBoard", "CrewHealth")';return false;">Upload </button>*@
-                        <button type="button" class="button1" style="width:18%;" onclick="return MedicineAvailableOnBoard();" id="btnMedicineAvailableOnBoard">Upload</button>
-                        </br>
-                        <input type="checkbox" name="uploaddoc" id="MedicalEquipmentOnBoard" value="1">  Medical Equipment On Board
-                        @*<button type="button" onclick="location.href='@Url.Action("MedicalEquipmentOnBoard", "CrewHealth")';return false;">Upload </button>*@
-                        <button type="button" class="button1" style="width:18%;" onclick="return MedicalEquipmentOnBoard();" id="btnMedicalEquipmentOnBoard">Upload</button>
-                        </br>
-                        <input type="checkbox" name="uploaddoc" id="MedicalHistoryUpload" value="1"> Medical History Upload
-                        @*<button type="button" onclick="location.href='@Url.Action("MedicalHistoryUpload", "CrewHealth")';return false;">Upload </button>*@
-                        <button type="button" class="button1" style="width:18%;" onclick="return MedicalHistoryUpload();" id="btnMedicalHistoryUpload">Upload</button>
-                        </br>
-                        <input type="checkbox" name="uploaddoc" id="WorkAndRestHourLatestRecord" value="1"> Work And Rest Hour Latest Record
-                        @*<button type="button" onclick="location.href='@Url.Action("WorkAndRestHourLatestRecord", "CrewHealth")';return false;">Upload</button>*@
-                        <button type="button" class="button1" style="width:18%;" onclick="return WorkAndRestHourLatestRecord();" id="btnWorkAndRestHourLatestRecord">Upload</button>
-                        </br>
-                        <input type="checkbox" name="uploaddoc" id="PreExistingMedicationPrescription" value="1">  Pre Existing Medication Prescription
-                        @*<button type="button" onclick="location.href='@Url.Action("PreExistingMedicationPrescription", "CrewHealth")';return false;">Upload </button>*@
-                        <button type="button" class="button1" style="width:18%;" onclick="return PreExistingMedicationPrescription();" id="btnPreExistingMedicationPrescription">Upload</button>
-                        </br>
+                        <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return UploadJoiningMedical();" id="btnUploadJoiningMedical">Upload Joining Medical</button>
 
-                        <input type="checkbox" name="uploaddoc" id="UploadPistures" value="1">  Upload Pistures
+                        <input type="checkbox" name="uploaddoc" id="MedicineAvailableOnBoard" value="1">
+                        @*<button type="button" onclick="location.href='@Url.Action("MedicineAvailableOnBoard", "CrewHealth")';return false;">Upload </button>*@
+                        <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return MedicineAvailableOnBoard();" id="btnMedicineAvailableOnBoard">Upload Medicine Available On Board</button>
+
+                        <input type="checkbox" name="uploaddoc" id="MedicalEquipmentOnBoard" value="1">
+                        @*<button type="button" onclick="location.href='@Url.Action("MedicalEquipmentOnBoard", "CrewHealth")';return false;">Upload </button>*@
+                        <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return MedicalEquipmentOnBoard();" id="btnMedicalEquipmentOnBoard">Upload Medical Equipment On Board</button>
+
+                        <input type="checkbox" name="uploaddoc" id="MedicalHistoryUpload" value="1">
+                        @*<button type="button" onclick="location.href='@Url.Action("MedicalHistoryUpload", "CrewHealth")';return false;">Upload </button>*@
+                        <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return MedicalHistoryUpload();" id="btnMedicalHistoryUpload">Upload Medical History Upload</button>
+
+                        <input type="checkbox" name="uploaddoc" id="WorkAndRestHourLatestRecord" value="1">
+                        @*<button type="button" onclick="location.href='@Url.Action("WorkAndRestHourLatestRecord", "CrewHealth")';return false;">Upload</button>*@
+                        <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return WorkAndRestHourLatestRecord();" id="btnWorkAndRestHourLatestRecord">Upload Work And Rest Hour Latest Record</button>
+
+                        <input type="checkbox" name="uploaddoc" id="PreExistingMedicationPrescription" value="1">
+                        @*<button type="button" onclick="location.href='@Url.Action("PreExistingMedicationPrescription", "CrewHealth")';return false;">Upload </button>*@
+                        <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return PreExistingMedicationPrescription();" id="btnPreExistingMedicationPrescription">Upload Pre Existing Medication Prescription</button>
+
+
+
+                        <input type="checkbox" name="uploaddoc" id="UploadPistures" value="1">
                         @*<button type="button" onclick="location.href='@Url.Action("UploadPistures", "CrewHealth")';return false;">Upload </button>*@
-                        <button type="button" class="button1" style="width:18%;" onclick="return UploadPistures();" id="btnUploadPistures">Upload</button>
+                        <button type="button" class="button1" style="width:90%; margin: 5px;" onclick="return UploadPistures();" id="btnUploadPistures">Upload</button>
                         </br>
                     </div>
                 </div>
@@ -416,13 +417,13 @@
                         <input type="text" class="form-control" id="FrequencyOfPain" placeholder="Frequency Of Pain" />
                     </div>
                     @*<div class="form-group">
-                            <span style="font-size:20px;">Upload Pistures:</span>
-                            <br />
-                            <input type="file" name="postedFile" accept="application/pdf,image/gif, image/jpeg" />
-                            <br />
-                            <input type="submit" value="Upload" class="btn btn-warning" />
-                            <br /><br />
-                        </div>*@
+                <span style="font-size:20px;">Upload Pistures:</span>
+                <br />
+                <input type="file" name="postedFile" accept="application/pdf,image/gif, image/jpeg" />
+                <br />
+                <input type="submit" value="Upload" class="btn btn-warning" />
+                <br /><br />
+            </div>*@
                 </div>
 
                 <div class="col-md-4">
@@ -446,19 +447,24 @@
                     <div class="form-group">
                         &nbsp; &nbsp; &nbsp;
                     </div>
+                    @*<div class="form-group">
+            <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM();">Add</button>
+        </div>*@
                     <div class="form-group">
-                        <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM();">Add</button>
+                        <label for="Email">Email</label>
+                        <input type="text" class="form-control" style="width:90%;" id="Email" placeholder="Enter the Email for Doctors / Hospitals" />
                     </div>
+                    <button type="button" class="button1" id="" onclick="">Send</button>
                 </div>
-
+             
 
 
 
 
 
                 @*<div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                        <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM();">Add</button>
-                    </div>*@
+            <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRM();">Add</button>
+        </div>*@
             </div>
 
 
