--- a/TM.RestHour/Views/Equipments/Index2.cshtml
+++ b/TM.RestHour/Views/Equipments/Index2.cshtml
@@ -214,7 +214,7 @@
                                 @*<img src="~/background/excel.png" class="img-responsive" style="height:100%; width:100%;" />*@
                             </div>
                             <div class="export-template-label" style="display:inline-block;margin:4px 5px -8px 0px;">
-                                <a href="../../MedicineNew/MedicineList.xlsx" target="_self" download>
+                                <a href="../MedicineNew/MedicineList.xlsx" target="_self" download>
                                     <img src="#" alt="Download Template" style="float:left; width:160px;" class="button1">
                                 </a>
                             </div>
