--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -498,7 +498,7 @@
                     </li>
 
 
-                    <li class=""><a href='@Url.Action("Index", "About")'>Plans</a></li>
+                    <li class=""><a href='@Url.Action("Index", "Plans")'>Plans</a></li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
