--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -92,7 +92,9 @@
                                     <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
                                         <li><a href="@Url.Action("UploadJoiningMedical", "CrewHealth")" style="border:none;">Upload Joining Medical</a></li>
                                         <li><a href="@Url.Action("JoiningMedicalReport", "CrewHealth")" style="border:none;">Joining Medical Report</a></li>
+
                                         <li><a href="@Url.Action("MonthlyMedicalAdvisory", "CrewHealth")" style="border:none;">Monthly Medical Data</a></li>
+
                                         <li><a href="@Url.Action("MedicalHistory", "CrewHealth")" style="border:none;">Medical History</a></li>
                                         <li><a href="@Url.Action("MedicalTreatment", "CrewHealth")" style="border:none;">CIRM</a></li>
                                         <li><a href="@Url.Action("DailyTemperatureReading", "CrewHealth")" style="border:none;">Daily Temperature Reading</a></li>
@@ -380,7 +382,7 @@
                                     <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
 
                                         <li><a href="@Url.Action("JoiningMedicalReport", "CrewHealth")" style="border:none;">Joining Medical Report</a></li>
-                                        <li><a href="@Url.Action("MonthlyMedicalAdvisory", "CrewHealth")" style="border:none;">Monthly Medical Data</a></li>
+                                        @*<li><a href="@Url.Action("MonthlyMedicalAdvisory", "CrewHealth")" style="border:none;">Monthly Medical Data</a></li>*@
                                         <li><a href="@Url.Action("MedicalHistory", "CrewHealth")" style="border:none;">Medical History</a></li>
                                         <li><a href="@Url.Action("MedicalTreatment", "CrewHealth")" style="border:none;">CIRM</a></li>
                                     </ul>
