--- a/TM.RestHour/Views/Equipments/Index.cshtml
+++ b/TM.RestHour/Views/Equipments/Index.cshtml
@@ -50,7 +50,7 @@
 @Html.Hidden("GetMedicalEquipmentByID", @Url.Action("GetMedicalEquipmentByID", "Equipments"))
 @Html.Hidden("DeleteEquipments", @Url.Action("DeleteEquipments", "Equipments"))
 
-
+@Html.Hidden("loadDataPrint", @Url.Action("LoadDataPrint", "Equipments"))
 
 <body style="background-image: url(../background/equipment.jpg);
     background-size: cover;">
@@ -188,6 +188,38 @@
                     </div>
                     <button type="button" class="button1" style="width:auto" id="btnDownloadEquipment">Download Medical Equipment</button><br /><br />
                 </div>
+
+
+
+
+
+
+
+                <div id="dvprint" style="display:none;">
+                    @*<img src="~/companylogo/companylogo.png" />*@
+                    Medical Equipment Report
+                    <hr>
+                    <table id="certtable_print" class="display" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th align="left">Equipment Name </th>
+                                <th align="left">Quantity</th>
+                                <th align="left">Comment </th>
+                                <th align="left">Expiry Date</th>
+                                <th align="left">Location </th>
+                            </tr>
+                        </thead>
+                    </table>
+
+                </div>
+
+
+
+
+
+
+
+
                 <div class="col-md-3 bac">
                     <div class="">
 
@@ -248,7 +280,7 @@
         $(document).ready(function () {
 
             SetUpGrid();
-
+            SetUpGridloadDataPrint();
         });
 
 
@@ -293,6 +325,15 @@
                 }
             }
         });
+
+
+
+        $("#btnDownloadEquipment").click(function () {
+            //PrintTest('');
+            Popup('');
+        });
+
+
 
     </script>
 
