--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -127,14 +127,14 @@
                                 </li>
 
                                 @*<li class="dropdown">
-                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                        </ul>
-                    </li>*@
+            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+            </ul>
+        </li>*@
 
                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -152,7 +152,7 @@
 
 
                                 @*<li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>*@
-
+                                <li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>
                             </ul>
                         </li>
 
@@ -282,14 +282,14 @@
                                 </li>
 
                                 @*<li class="dropdown">
-                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                        </ul>
-                    </li>*@
+            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+            </ul>
+        </li>*@
 
                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -305,7 +305,9 @@
                                     </ul>
                                 </li>
 
+                                <li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>
                             </ul>
+
                         </li>
 
                         <li class="dropdown">
@@ -413,14 +415,14 @@
                                 </li>
 
                                 @*<li class="dropdown">
-                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-                        </ul>
-                    </li>*@
+            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+            </a>
+            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+            </ul>
+        </li>*@
 
                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -436,6 +438,7 @@
                                     </ul>
                                 </li>
 
+                                <li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>
                             </ul>
                         </li>
 
