Worth_SQL_Script_Initial_04122020

--- a/TM.RestHour/Views/Reports/Index.cshtml
+++ b/TM.RestHour/Views/Reports/Index.cshtml
@@ -201,7 +201,7 @@
 
                                     <div class="col-md-5" id="sideform" style="float: right; width: 0%;">
                                         <div class="form-group" style="float: right; width: 0%;">
-                                            <img src="~/companylogo/companylogo.png" />
+                                            @*<img src="~/companylogo/companylogo.png" />*@
                                         </div>
                                     </div>
 
