--- a/TM.RestHour/Views/ReportsNCReportByMonth/MonthlyView.cshtml
+++ b/TM.RestHour/Views/ReportsNCReportByMonth/MonthlyView.cshtml
@@ -58,7 +58,7 @@
 
                                     <div class="col-md-7" style="float: right; width: 0%;">
                                         <div class="form-group">
-                                            <img src="~/companylogo/companylogo.png" />
+                                            @*<img src="~/companylogo/companylogo.png" />*@
                                         </div>
                                     </div>
 
@@ -85,7 +85,7 @@
 
                                     <div class="col-md-4" id="sideform1">
                                         <div class="form-group">
-                                            <button type="button" class="button1" id="btnPrint" disabled="disabled" onclick="GetNonComplianceDetailsForMV();">Print Report</button>
+                                            @*<button type="button" class="button1" id="btnPrint" disabled="disabled" onclick="GetNonComplianceDetailsForMV();">Print Report</button>*@
                                         </div>
                                     </div>
                                 </form>
