--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
 
 
                                 @*<li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>*@
-                                <li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>
+                                @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
                             </ul>
                         </li>
 
@@ -305,7 +305,7 @@
                                     </ul>
                                 </li>
 
-                                <li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>
+                                @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
                             </ul>
 
                         </li>
@@ -438,7 +438,7 @@
                                     </ul>
                                 </li>
 
-                                <li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>
+                                @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
                             </ul>
                         </li>
 
