--- a/TM.RestHour/Views/CrewList/CrewListNew.cshtml
+++ b/TM.RestHour/Views/CrewList/CrewListNew.cshtml
@@ -38,7 +38,7 @@
         @*@Html.Hidden("GetCrewBookedHours", @Url.Action("GetCrewBookedHours", "TimeSheet"))*@
         <div class="col-md-6" id="sideform">
 
-            <button type="button" class="button1" id="btnPrint" @*disabled="disabled"*@>Print Report</button>
+            @*<button type="button" class="button1" id="btnPrint" disabled="disabled">Print Report</button>*@
 
         </div>
 
