--- a/TM.RestHour/Views/Reports/CrewList.cshtml
+++ b/TM.RestHour/Views/Reports/CrewList.cshtml
@@ -61,7 +61,7 @@
                                 <tr>
                                     <td align="left" width="40%"> </td>
                                     <td align="left" width="40%"> </td>
-                                    <td align="right" width="20%">  <img src="~/companylogo/companylogo.png" /></td>
+                                    @*<td align="right" width="20%">  <img src="~/companylogo/companylogo.png" /></td>*@
                                 </tr>
                                 <tr>
                                     <td align="left" width="40%">Name and type of ship :<strong> @Session["ShipName"].ToString() </strong> <span id="x"></span></td>
