--- a/TM.RestHour/Views/Reports/WorkAndRestHours.cshtml
+++ b/TM.RestHour/Views/Reports/WorkAndRestHours.cshtml
@@ -55,7 +55,7 @@
                                                 </div>
 
                                                 <div class="form-group" style="float: right; width: 0%;">
-                                                    <img src="~/companylogo/companylogo.png" />
+                                                    @*<img src="~/companylogo/companylogo.png" />*@
                                                 </div>
 
                                             </div>
