--- a/TM.RestHour/Views/MailServerDetails/FirstRun.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/FirstRun.cshtml
@@ -323,7 +323,7 @@
                                                 <div class="modal-footer" style="width: 145%;">
                                                     @*<button type="button" class="button1" id="btnAdd" onclick="return Add();" style="width:86px;">Add        </button>
                                         <button type="button" class="button1" id="btnUpdate" onclick="Add();" style="width:86px;">Update     </button>*@
-                                                    <button type="button" class="button1" id="btnNext" onclick="return SaveInitialShipValues();" style="width:86px;">Next</button>
+                                                    <button type="button" class="button1" id="btnNext" disabled="disabled" onclick="return SaveInitialShipValues();" style="width:86px;">Next</button>
                                                     <button type="button" class="button1" id="btnAdd" onclick="return GetCompanyDetailsByID();" style="width:86px;">Get Details</button>
                                                 </div>
 
@@ -360,7 +360,12 @@
 
                             $(document).ready(function () {
                                 $(".numberinput").forceNumeric();
+
                             });
+
+                $("#btnAdd").click(function () {
+                    $('#btnNext').attr('disabled', false);
+                });
 
                             // forceNumeric() plug-in implementation
                             jQuery.fn.forceNumeric = function () {
