--- a/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
+++ b/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
@@ -34,9 +34,9 @@
             <div class="card">
 
                 @*<div class="form-group">
-                        <label for="Name">Name</label>
-                        <input type="text" class="form-control" id="Name" placeholder="Name" />
-                    </div>*@
+                    <label for="Name">Name</label>
+                    <input type="text" class="form-control" id="Name" placeholder="Name" />
+                </div>*@
                 <div class="form-group">
                     <label for="FirstName">Given Name</label>
                     <input type="text" class="form-control" id="FirstName" placeholder="Given Name" />
@@ -85,9 +85,9 @@
                     <input type="text" class="form-control" id="POB" placeholder="Place Of Birth" />
                 </div>
                 @*<div class="form-group">
-                        <label for="CrewIdentity">Identity</label>
-                        <input type="text" class="form-control" id="CrewIdentity" placeholder="Crew Identity" />
-                    </div>*@
+                    <label for="CrewIdentity">Identity</label>
+                    <input type="text" class="form-control" id="CrewIdentity" placeholder="Crew Identity" />
+                </div>*@
                 <div class="form-group">
                     <label for="PassportSeamanPassportBook">Seaman Book / Passport</label>
                     <div>
@@ -106,9 +106,9 @@
                 <br />
                 <br />
                 @*<div class="form-group">
-                        <label for="PayrollNo">Payroll No</label>
-                        <input type="text" class="form-control" id="PayNum" placeholder="PayrollNo" />
-                    </div>*@
+                    <label for="PayrollNo">Payroll No</label>
+                    <input type="text" class="form-control" id="PayNum" placeholder="PayrollNo" />
+                </div>*@
             </div>
         </div>
 
@@ -117,9 +117,9 @@
 
 
                 @*<div class="form-group">
-                        <label for="EmployeeNumber">Employee Number</label>
-                        <input type="text" class="form-control" id="EmployeeNumber" placeholder="EmployeeNumber" />
-                    </div>*@
+                    <label for="EmployeeNumber">Employee Number</label>
+                    <input type="text" class="form-control" id="EmployeeNumber" placeholder="EmployeeNumber" />
+                </div>*@
                 <div class="form-group">
                     <label for="Department">Department</label>
                     @*@Html.ListBoxFor(model => model.DepartmentMasterID, (IEnumerable<SelectListItem>)ViewBag.Departments, new { @class = "listbox", @multiple = "multiple", @id = "ddlAdmCru" })*@
@@ -153,18 +153,54 @@
                     </div>
                 </div>
 
-                <div class="form-group" style="margin-bottom: 18px;">
+                @*<div class="form-group" style="margin-bottom: 18px;">
                     <button type="button" class="button1" id="btnAdd" onclick="return AddCrew();" style="width:130px; float: left;">Add / Update Crew</button>
                     <button type="button" class="button1" id="btnAdd1" onclick="return AddCrewEdit();" style="display:none; width:120px; float: right;">More Settings</button>
                     @using (Html.BeginForm())
                     {
                         <input type="submit" class="button1" id="btnClose" onclick="return CloseCrew();" style="width:130px; float: left;" Close />
                     }
-                        @*<a href="@Url.Action("Index", "CreateNewUserAccount")"><span> Vessel</span> </a>*@
-                    </div>
+                </div>*@
+
 
             </div>
         </div>
+
+
+
+
+
+        <div class="col-sm-2">
+            <div class="form-group" style="margin-bottom: 18px;">
+                <button type="button" class="button1" id="btnAdd" onclick="return AddCrew();" style="width:130px; float: right;">Add / Update Crew</button>
+            </div>
+            <div>&nbsp;</div>
+        </div>
+
+        <div class="col-sm-2">
+            <div class="form-group" style="margin-bottom: 18px;">
+                @using (Html.BeginForm())
+                {
+                    @*<input type="submit" class="button1" id="btnClose" onclick="return CloseCrew();" style="width:130px; float: right;" Close />*@
+                    <button type="submit" class="button1" id="btnClose" onclick="return CloseCrew();" style="width: 120px; float: right;" Close>Clear</button>
+                }
+            </div>
+            <div>&nbsp;</div>
+        </div>
+
+        <div class="col-sm-2">
+            <div class="form-group" style="margin-bottom: 18px;">
+                <button type="button" class="button1" id="btnAdd1" onclick="return AddCrewEdit();" style="display:none; width:120px; float: right;">More Settings</button>
+            </div>
+            <div>&nbsp;</div>
+        </div>
+
+
+
+
+
+
+
     </form>
 </div>
 
