--- a/TM.RestHour/Views/MailServerDetails/Index.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/Index.cshtml
@@ -113,14 +113,14 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="POP3">POP3</label>
-                                            <input type="text" class="form-control" id="POP3" placeholder="POP3" />
+                                            <label for="POP3">IMAP / POP3 Server</label>
+                                            <input type="text" class="form-control" id="POP3" placeholder="IMAP / POP3" />
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="POP3 Port">POP3 Port</label>
-                                            <input type="text" class="form-control" id="POP3Port" placeholder="POP3 Port" />
+                                            <label for="POP3 Port">Port</label>
+                                            <input type="text" class="form-control" id="POP3Port" placeholder="Port" />
                                         </div>
                                     </div>
                                 </div>
