--- a/TM.RestHour/Views/HealthManagement/StressManagement.cshtml
+++ b/TM.RestHour/Views/HealthManagement/StressManagement.cshtml
@@ -12,8 +12,8 @@
     background-size: cover;">
 
     <div class="row">
-        <div class="col-md-5">
-            <h2 class="ta" >Stress Management</h2>
+        <div class="col-md-5" style=" padding-left: 132px;">
+            <h1 class="" style=" padding-top: 39px; color:white;" >Stress Management</h1>
         </div>
 
         <div class="col-md-7 backk">
