--- a/TM.RestHour/Views/Plans/Index.cshtml
+++ b/TM.RestHour/Views/Plans/Index.cshtml
@@ -10,8 +10,11 @@
         <div class="row col-md-8 backtt">
             <div class="row">
                 <embed src="../COVIDPLAN.pdf" width="800px;" height="385px;" />
+                
             </div>
+            <button type="button" class="buttonpop" id="" style="float: right; width: 100px;">Update</button>
         </div>
+       
     </div>
 </body>
 
