--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
                                         <li><a href="@Url.Action("MedicalHistory", "CrewHealth")" style="border:none;">Medical History</a></li>
                                         <li><a href="@Url.Action("MedicalTreatment", "CrewHealth")" style="border:none;">CIRM</a></li>
                                         <li><a href="@Url.Action("DailyTemperatureReading", "CrewHealth")" style="border:none;">Daily Temperature Reading</a></li>
-                                        <li><a href="@Url.Action("MailCIRM", "CrewHealth")" style="border:none;">Mail CIRM</a></li>
+                                        @*<li><a href="@Url.Action("MailCIRM", "CrewHealth")" style="border:none;">Mail CIRM</a></li>*@
                                     </ul>
                                 </li>
 
@@ -488,7 +488,7 @@
 
                                 @*<li><a href='@Url.Action("Index", "Reports")'>Monthly Work Hours</a></li>*@
                                 <li><a href='@Url.Action("DailyCrewReport", "Reports")'>Day Wise Crew Work Hours</a></li>
-                                <li><a href='@Url.Action("CrewList", "Reports")'>IMO Crew List</a></li>
+                                <li><a href='@Url.Action("CrewList", "Reports")'>Crew List</a></li>
                                 @*<li><a href='@Url.Action("WorkAndRestHours", "Reports")'>Work And Rest Hours</a></li>*@
                                 <li><a href='@Url.Action("MonthlyView", "ReportsNCReportByMonth")'>Monthly View</a></li>
 
