--- a/TM.RestHour/Views/help/index.cshtml
+++ b/TM.RestHour/Views/help/index.cshtml
@@ -382,7 +382,7 @@
                             <div class="panel-body">
                                 The Super Admin/Admin user can modify the time based on which compliance calculations are done
                                 The available time adjustments are a) +1H b) -1H c) +1D d) -1D
-                                <img src="~/background/HResetPassword.png" style="width: 100%; float: right;" width="42" height="400">
+                                <img src="~/background/HTime.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
                     </div>
