--- a/TM.RestHour/Views/CrewHealth/MedicalHistory.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalHistory.cshtml
@@ -61,9 +61,35 @@
 
 
         <div class="col-md-6 bac1" style="width: 67%;">
-            <div class="col-md-6" id="sideform">
-                <button type="button" class="button1" id="btnPrint" @*disabled="disabled"*@>Print Report</button>
+            @*<div class="col-md-6" id="sideform">
+            <button type="button" class="button1" id="btnPrint">Print Report</button>
+        </div>*@
+
+            <div class="form-group">
+                <div>
+                    <div class="form-group">
+                        <div class="col-md-8" id="sideform">
+                            <label for="ReportsDate"> Month & Year</label>
+                            <input name="ReportsDate" class="monthYearPicker form-control" style="width:200px;" id="ReportsDateVal" />
+                        </div>
+                        <div class="form-group" style="float: right; width: 0%;">
+                        </div>
+                        <div class="col-md-2" id="sideform">
+                            <button type="button" class="button1" id="btnAdd" @*disabled="disabled"*@ onclick="return GetHours2();">Show Report</button>
+                        </div>
+                        <div class="col-md-2" id="sideform">
+                            <button type="button" class="button1" id="btnPrint" @*disabled="disabled"*@>Print Report</button>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <div class="form-group">
+                <div>
+                  
+                </div>
+            </div>
+
             <div class="card">
                 <div style="margin:0 auto" class="tablecontainer">
                     <input type="hidden" id="hdnrole" />
@@ -136,11 +162,45 @@
 
 
         $(document).ready(function () {
-            //SetUpGridReport();
-         
-            SetUpGrid();
-            SetUpPrintGridReport();
+            //SetUpGrid();
+            SetUpPrintGridReport(); //
+
+            $('#btnPrint').attr('disabled', true);
+            $('#btnAdd').attr('disabled', true);
+
+            $(function () {
+                $('.monthYearPicker').datepicker({
+                    changeMonth: true,
+                    changeYear: true,
+                    showButtonPanel: true,
+                    dateFormat: 'MM yy'
+                }).focus(function () {
+                    var thisCalendar = $(this);
+                    $('.ui-datepicker-calendar').detach();
+                    $('.ui-datepicker-close').click(function () {
+                        var month = $("#ui-datepicker-div .ui-datepicker-month :selected").val();
+                        var year = $("#ui-datepicker-div .ui-datepicker-year :selected").val();
+                        thisCalendar.datepicker('setDate', new Date(year, month, 1));
+
+                        if ($('#ReportsDateVal').val() != '') {
+                            $('#btnPrint').attr('disabled', false);
+                            $('#btnAdd').attr('disabled', false);
+                          
+                            $('#rp').text($("#ui-datepicker-div .ui-datepicker-month :selected").text() + ' ' + year);
+                            
+                            $('#rp_print').text($("#ui-datepicker-div .ui-datepicker-month :selected").text() + ' ' + year);
+                        }
+                        else {
+
+                            $('#btnPrint').attr('disabled', true);
+                            $('#btnAdd').attr('disabled', true);
+
+                        }
+                    });
+                });
+            });
         });
+
 
 
 
@@ -149,6 +209,9 @@
             Popup2('');
         });
 
+        $("#btnAdd").click(function () {
+            SetUpGrid();
+        });
 
     </script>
 }
