--- a/TM.RestHour/Views/CrewHealth/UploadJoiningMedical.cshtml
+++ b/TM.RestHour/Views/CrewHealth/UploadJoiningMedical.cshtml
@@ -58,7 +58,8 @@
                                 </div>
                             </div>
                             @*<button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("PatientDetails", "CrewHealth")';return false;">Back To Patient Details Page</button>*@
-                            <button type="button" class="btn btn-primary" style="width:86px; background-color:crimson; color:aliceblue" onclick="window.close();">Close</button>
+                           
+                            @*<button type="button" class="btn btn-primary" style="width:86px; background-color:crimson; color:aliceblue" onclick="window.close();">Close</button>*@
 
                         }
 
