--- a/TM.RestHour/Views/MailServerDetails/IndexIn.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/IndexIn.cshtml
@@ -74,7 +74,7 @@
                                             <input type="text" class="form-control" id="Port" placeholder="Port" />
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    @*<div class="col-md-3">
                                         <div class="form-group">
                                             <label for="MailFrom">Mail From</label>
                                             <input type="text" class="form-control" id="MailFrom" placeholder="Mail From" />
@@ -90,9 +90,8 @@
                                         <div class="form-group">
                                             <label for="Password">Password</label>
                                             <input type="password" class="form-control" id="Password" placeholder="Password" />
-                                            @*<input type="password" class="form-control" id="ConfirmPassword" maxlength="10" placeholder="Confirm Password" style="width: 100%;" />*@
                                         </div>
-                                    </div>
+                                    </div>*@
 
                                     @*///////////////////////////////////////////////////////////////////////////*@
                                     <div class="col-md-3">
@@ -104,7 +103,8 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="Ship Email Password">Ship Email Password</label>
-                                            <input type="password" class="form-control" id="ShipEmailPassword" placeholder="Ship Email Password" />
+                                            @*<input type="password" class="form-control" id="ShipEmailPassword" placeholder="Ship Email Password" />*@
+                                            <input type="password" class="form-control" id="Password" placeholder="Ship Email Password" />
                                         </div>
                                     </div>
                                     <div class="col-md-3">
