--- a/TM.RestHour/Views/Reports/CrewList.cshtml
+++ b/TM.RestHour/Views/Reports/CrewList.cshtml
@@ -21,7 +21,7 @@
 
     <div class="row">
         <div class="col-md-5">
-            <h2 class="ta" style="color:#000;">IMO Crew List</h2>
+            <h2 class="ta" style="color:#000;">Crew List</h2>
         </div>
         <div class="col-md-7 bac">
             <div class="card">
@@ -100,7 +100,7 @@
 
                                 <th>Ranks or Rating</th>
                                 <th>Nationality</th>
-                                <th>Date and place of Birth</th>
+                                <th>Date of Birth</th>
                                 <th>Passport</th> @*<th>No. of Identity</th>*@
                                 <th>Seaman</th>
                             </tr>
@@ -121,7 +121,7 @@
 
                                 <th align="left">Ranks or Rating</th>
                                 <th align="left">Nationality</th>
-                                <th align="left">Date and place of Birth</th>
+                                <th align="left">Date of Birth</th>
                                 <th align="left">Passport</th> @*<th>No. of Identity</th>*@
                                 <th align="left">Seaman</th>
                             </tr>
